--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,6 @@
 ################################################################################
 
 /.vs
+/ParsingEngine/obj/Debug
+/ParsingEngine/obj/Release
+/Visiboole/.vs/VisiBoole/v15
