--- a/Visiboole/VisiBoole.csproj
+++ b/Visiboole/VisiBoole.csproj
@@ -167,12 +167,14 @@
     <None Include="Resources\VisiBooleIcon.ico" />
     <None Include="Resources\Letter V blue.ico" />
     <Content Include="Resources\Close.png" />
+    <None Include="Resources\MultiTick.png" />
     <Content Include="Resources\NewFile.png" />
     <Content Include="Resources\OpenFile.png" />
     <Content Include="Resources\Run.png" />
     <Content Include="Resources\Save.png" />
     <Content Include="Resources\SaveAll.png" />
     <Content Include="Resources\Stop.png" />
+    <None Include="Resources\Tick.png" />
     <Content Include="TODO.txt" />
   </ItemGroup>
   <ItemGroup>
