Work on constant statements and concat statements

--- a/Visiboole/VisiBoole.csproj
+++ b/Visiboole/VisiBoole.csproj
@@ -90,6 +90,8 @@
     <Compile Include="ParsingEngine\Statements\CommentStmt.cs" />
     <Compile Include="ParsingEngine\Database.cs" />
     <Compile Include="ParsingEngine\ObjectCode\DependentVariable.cs" />
+    <Compile Include="ParsingEngine\Statements\ConcatStmt.cs" />
+    <Compile Include="ParsingEngine\Statements\ConstantStmt.cs" />
     <Compile Include="ParsingEngine\Statements\DffClockStmt.cs" />
     <Compile Include="ParsingEngine\Statements\EmptyStmt.cs" />
     <Compile Include="Models\FormatSpecifier.cs" />
