--- a/Visiboole/VisiBoole.csproj
+++ b/Visiboole/VisiBoole.csproj
@@ -211,7 +211,9 @@
     <Content Include="license.txt" />
     <Content Include="Resources\Close.png" />
     <None Include="Resources\Expand.png" />
-    <Content Include="Resources\Help Documentation\About.txt" />
+    <Content Include="Resources\Help Documentation\About.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
     <Content Include="Resources\Help Documentation\Syntax.txt">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
